--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,91 @@
 version: '3.8'
 services:
-  postgres_server:
-    image: postgres:14.4
-    container_name: ${POSTGRES_CONTAINER_NAME}
-    env_file:
-      - .env
+  db_server:
+    image: postgres:14.11
+    container_name: postgres_server
+    environment:
+      POSTGRES_PASSWORD: "master_middleware"
     volumes:
-      - ./data/Postgresql_14.4/:/var/lib/postgresql/data
+      - ./data/Postgresql_14.11/:/var/lib/postgresql/data
       # - ./my_custom_postgresql.conf:/var/lib/postgresql/data/postgresql.conf
-    ports:
-      - "${POSTGRES_PORT}:5432"
+    # ports:
+    #   - "5432:5432"
     
     restart: unless-stopped
     
     networks:
-      - docker-postgres
+      middleware_networks:
+        ipv4_address: 172.30.0.2
 
   pgadmin:
-    container_name: ${PGAADMIN_CONTAINER_NAME}
+    container_name: postgres_pgadmin
     image: dpage/pgadmin4
-    env_file:
-      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "admin@middleware.com"
+      PGADMIN_DEFAULT_PASSWORD: "middleware"
     volumes:
        - ./data/pgAdmin/:/var/lib/pgadmin
     ports:
-      - "${PGADMIN_PORT}:80"
+      - "3100:80"
     networks:
-      - docker-postgres
+      middleware_networks:
+        ipv4_address: 172.30.0.3
     
     restart: unless-stopped
     
     depends_on:
-      - postgres_server
+      - db_server
+
+  backend:
+    container_name: cn_middleware
+    build:
+      context: /Users/hardik.chauhan/opensesame/projects/CareerNav-Middleware
+      dockerfile: Dockerfile.local
+    volumes:
+      - /Users/hardik.chauhan/opensesame/projects/CareerNav-Middleware:/app
+    env_file:
+      - /Users/hardik.chauhan/opensesame/projects/CareerNav-Middleware/.env
+    ports:
+      - "3200:3000"
+    networks:
+      middleware_networks:
+        ipv4_address: 172.30.0.4
+    
+    restart: always
+    
+    depends_on:
+      - db_server
+
+  # fonrtend:
+  #   container_name: cn_frontend
+  #   platform: linux/amd64
+  #   build:
+  #     context: /Users/hardik.chauhan/opensesame/projects/CareerNav-UI
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - /Users/hardik.chauhan/opensesame/projects/CareerNav-UI:/app
+  #   # command: /bin/sh -c "while :; do sleep 1; done"
+  #   env_file:
+  #     - /Users/hardik.chauhan/opensesame/projects/CareerNav-UI/.env
+  #   ports:
+  #     - "6200:4200"
+  #   networks:
+  #     middleware_networks:
+  #       ipv4_address: 172.30.0.5
+    
+  #   restart: always
+    
+  #   depends_on:
+  #     - db_server
+  #     - backend
 
 networks:
-  docker-postgres:
+  middleware_networks:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.30.0.0/16
 
 volumes:
     postgres:
